_common.css
:root {
	--sidebar-width: 5rem;
	--sidebar-height: 4.5rem;
	--sidebar-expanded-width: 20rem;
	--primary-color: #600;
	--secondary-color: #123;
	--tertiary-color: #900;
	--text-primary-color: #101010;
	--text-secondary-color: #202020;
	--text-tertiary-color: #303030;
	--gray-color: #666;
	--dark-gray-color: #333;
	--light-color: #eee;
	--light-transparent: #fff7;
	--light-clear: #fff3;
	--light-opaque: #fffb;
	--dark-color: #111;
	--dark-transparent: #0007;
	--dark-clear: #0003;
	--dark-opaque: #000b;
	--transparent: #0000;
	--light-links: #fff;
	--dark-links: #003;
	--bywr-red: #600;
	--bywr-red-transparent: #6007;
	--bywr-red-clear: #6003;
	--bywr-red-opaque: #600b;
	--bywr-red-light: #900;
	--bywr-red-light-transparent: #9007;
	--bywr-red-light-clear: #9003;
	--bywr-red-light-opaque: #900b;
	--bywr-red-dark: #300;
	--bywr-red-dark-transparent: #3007;
	--bywr-red-dark-clear: #3003;
	--bywr-red-dark-opaque: #300b;
}
/* === SELECTION === */
::selection {
	background-color: #012;
	color: #fff;
}
::-webkit-selection {
	background-color: #012;
	color: #fff;
}
::-moz-selection {
	background-color: #012;
	color: #fff;
}
/* === PLACEHOLDER === */
::-ms-input-placeholder {
	color: #444;
	font-weight: 300;
}
::-webkit-input-placeholder {
	color: #444;
	font-weight: 300;
}
::-moz-placeholder {
	color: #444;
	font-weight: 300;
}
/* === SCROLLBAR === */
::-webkit-scrollbar {
	background: #fff;
	border-radius: 8px;
	width: 8px;
}
::-webkit-scrollbar-track {
	box-shadow: inset 0 0 5px #999;
	border-radius: 12px;
}
::-webkit-scrollbar-thumb {
	background: #111;
	border-radius: 12px;
}
::-webkit-scrollbar-thumb:hover {
	background: #444;
}
/* === GENERAL BODY === */
@font-face {
	font-family: "Bahnschrift";
	src: url("./css/webfonts/bahnschrift.ttf") format("truetype");
}
@font-face {
	font-family: "Open Dyslexic";
	src: url("./css/webfonts/open_dyslexic.woff2") format("woff2");
}
* {
	min-width: 0;
	/* scroll */
	scrollbar-width: 12px;
	scrollbar-color: #111 #fff;
	/* anim */
	-webkit-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
	-o-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
	-ms-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
	-moz-transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
	transition: opacity 0.3s ease, height 0.3s ease, width 0.3s ease, transform 0.3s ease, margin 0.3s ease, padding 0.3s ease, background-color 0.3s ease, filter 0.3s ease !important;
}
html,
body {
	position: relative;
	font-family: "Bahnschrift";
	background: #fff0;
	font-size: 16px;
	letter-spacing: -0.1px;
	line-height: 1.5;
	font-weight: 400;
	color: var(--dark-color);
	text-overflow: ellipsis !important;
	white-space: wrap !important;
}
/* === GENERAL ELEMENTS === */
ol,
ul {
	margin: 0;
	padding: 0;
	list-style: none;
}
select {
	display: block;
}
figure {
	margin: 0;
}
iframe {
	border: 0;
}
img {
	max-width: 100%;
}
hr {
	margin: 0.5rem 0;
}
p {
	margin-bottom: 0.5rem;
}
pre {
	margin: 0;
    padding: 0.125rem 0.25rem;
	line-height: 1;
    overflow: auto;
    width: auto;
    height: auto;
}
i,
i.fas,
span.fas {
	padding: 0.125rem 0.25rem;
}
i.input-icon,
i.select-icon {
	position: absolute;
	top: 25%;
	z-index: 9;
}
i.input-icon {
	left: 1.5rem;
}
i.select-icon {
	right: 1.5rem;
}
a {
	color: var(--primary-color);
	text-decoration: none !important;
}
a:hover,
a:hover * {
	text-decoration: underline !important;
	color: #69f !important;
	text-shadow: 0 0 var(--transparent) !important;
}
.link {
	text-decoration: underline !important;
}
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
	margin-bottom: 0;
	margin-top: 0;
	font-weight: 600;
}
h1,
.h1 {
	font-size: 2.25rem;
}
h2,
.h2 {
	font-size: 1.875rem;
}
h3,
.h3 {
	font-size: 1.5rem;
}
h4,
.h4 {
	font-size: 1.125rem;
}
h5,
.h5 {
	font-size: 1rem;
}
h6,
.h6 {
	font-size: 0.875rem;
}
td,
th {
	border-radius: 0px;
}
/* === MISC === */
.tooltip {
	-webkit-transition: all 0s !important;
	-o-transition: all 0s !important;
	-ms-transition: all 0s !important;
	-moz-transition: all 0s !important;
	transition: all 0s !important;
}
/* === BACKGROUND COLORS AND TEXTS === */
.bg-primary {
	background: var(--primary-color) !important;
}
.bg-secondary {
	background: var(--secondary-color) !important;
}
.bg-tertiary {
	background: var(--tertiary-color) !important;
}
.bg-black {
	background: #000 !important;
}
.bg-white {
	background: #fff !important;
}
.bg-dark {
	background: var(--dark-color) !important;
}
.bg-light {
	background: var(--light-color) !important;
}
.bg-light-transparent {
	background: var(--light-transparent);
}
.bg-dark-transparent {
	background: var(--dark-transparent);
}
.bg-light-clear {
	background: var(--light-clear);
}
.bg-dark-clear {
	background: var(--dark-clear);
}
.bg-light-opaque {
	background: var(--light-opaque);
}
.bg-dark-opaque {
	background: var(--dark-opaque);
}
.text-no-shadow,
.text-no-shadow * {
	text-shadow: 0 0 var(--transparent) !important;
}
.text-dark-shadow,
.text-dark-shadow * {
	text-shadow: 0px 0px 5px var(--dark-transparent), 2px 0px 5px var(--dark-transparent), -2px 0px 5px var(--dark-transparent), 0px 2px 5px var(--dark-transparent), 0px -2px 5px var(--dark-transparent);
}
.text-darker-shadow,
.text-darker-shadow * {
	text-shadow: 0px 0px 5px var(--dark-color), 2px 0px 5px var(--dark-color), -2px 0px 5px var(--dark-color), 0px 2px 5px var(--dark-color), 0px -2px 5px var(--dark-color);
}
/* ... */

